<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SignInFragment">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view" />

    <TextView
        android:id="@+id/enter_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/login_text_view"
        app:layout_constraintTop_toBottomOf="@id/login_text_view" />

    <TextView
        android:id="@+id/email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/login_text_view"
        app:layout_constraintTop_toBottomOf="@id/enter_text_view" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/password"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/login_text_view"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/custom_edit_text"
        android:drawableEnd="@drawable/ic_eye"
        android:fontFamily="@font/montserrat"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_text_view" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/email_edit_text"
        app:layout_constraintStart_toStartOf="@id/email_edit_text"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text" />

    <TextView
        android:id="@+id/have_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/don_t_have_an_account"
        android:textColor="#8F9090"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textColor="@color/green"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/have_account_text_view"
        app:layout_constraintTop_toTopOf="@id/have_account_text_view" />

    <TextView
        android:id="@+id/connect_using"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/connect_using"
        android:textColor="#8F9090"
        app:layout_constraintEnd_toEndOf="@id/sign_up_button"
        app:layout_constraintStart_toStartOf="@id/have_account_text_view"
        app:layout_constraintTop_toBottomOf="@id/sign_up_button" />

    <ImageView
        android:id="@+id/google_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/google_logo"
        app:layout_constraintEnd_toEndOf="@id/connect_using"
        app:layout_constraintStart_toStartOf="@id/connect_using"
        app:layout_constraintTop_toBottomOf="@id/connect_using"

        />

</androidx.constraintlayout.widget.ConstraintLayout>